# rapid-fs

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
domains/: api.hypi.ai
src/: lib.rs  vfs.rs
tests/: basics.rs
tests/data/services/123/versions/v1/: pipeline_register.xml  schema.xml
tests/data/services/123/versions/v1/ecma/: file1.js
tests/data/services/domains/: music.apps.hypi.ai
