[package]
name = "rapid-fs"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "A simple virtual file system API for Hypi's RAPID server"
homepage = "https://github.com/hypi-universe/rapid-fs"
repository = "https://github.com/hypi-universe/rapid-fs"
authors = [
    "zcourts"
]
readme = "README.md"
categories = ["filesystem"]

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
bytes = "1.6.0"
log = "0.4.21"
